--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
           <version>${aspectj.maven.plugin.version}</version>
           <executions>
             <execution>
+              <phase>process-classes</phase>
               <goals>
                 <goal>compile</goal>
                 <goal>test-compile</goal>
@@ -74,13 +75,10 @@
             <complianceLevel>17</complianceLevel>
             <showWeaveInfo>true</showWeaveInfo>
             <verbose>true</verbose>
+            <!-- Workaround: let Javac take care of annotation processing instead of AJC or ECJ  -->
+            <!--<proc>none</proc>-->
           </configuration>
           <dependencies>
-            <dependency>
-              <groupId>org.aspectj</groupId>
-              <artifactId>aspectjrt</artifactId>
-              <version>${aspectj.version}</version>
-            </dependency>
             <dependency>
               <groupId>org.aspectj</groupId>
               <artifactId>aspectjtools</artifactId>
